fix mobile file viewer too large

--- a/src/webapp/homepage.css
+++ b/src/webapp/homepage.css
@@ -163,8 +163,8 @@ a {
 	max-width:1280px; max-height:720px;
 }
 .popup > iframe{
-	min-width:1280px;
-	min-height:720px;
+	min-width:min(100vw,1280px);
+	min-height:min(80vh,720px);
 }
 .popup > audio {
 	min-width:800px;
